newbie/6_social-proof-section/styles.css
/* General */

body {
  font-family: 'Spartan', sans-serif;
  font-size: 15px;
  color: var(--dark-magenta);
  padding: 1em;
}

h1,
p {
  margin-top: 0;
}

/* colors */
:root {
  /* primary */
  --dark-magenta: hsl(300, 43%, 22%);
  --soft-pink: hsl(333, 80%, 67%);

  /* neutral */
  --dark-grayish-magenta: hsl(303, 10%, 53%);
  --light-grayish-magenta: hsl(300, 24%, 96%);
  --white: hsl(0, 0%, 100%);
}

/* Typography */

.rating,
.name {
  font-weight: 700;
}

.description {
  margin-bottom: 3em;
}

.verified {
  color: var(--soft-pink);
}

/* Layout */

/* .container {
  display: flex;
  flex-direction: column;
} */

.rating,
.card {
  border-radius: .5em;
}

.rating {
  background-color: var(--light-grayish-magenta);
  margin-bottom: 1.5em;
  padding: 1em;
}

.rated {
  margin-bottom: 0;
}

.container-reviews {
  color: var(--white);
}

.card {
  background-color: var(--dark-magenta);
  padding: 2em;
  margin-bottom: 1.5em;
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

/* images */
.star {
  display: inline-block;
  background-image: url(./images/icon-star.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: left;
  width: 25px;
  height: 25px;
  margin-right: 1em;
}

